// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectComponentGroupsSettings > matches snapshot with component groups selected 1`] = `
<DocumentFragment>
  <main
    class="mint-main-content"
    id="main-content"
    role="main"
    tabindex="-1"
  >
    <div
      class="grid-container"
      data-testid="gridContainer"
    >
      <div
        class="mobile:grid-col-12 tablet:grid-col-12 desktop:grid-col-12"
        data-testid="grid"
      >
        <nav
          aria-label="Breadcrumbs"
          class="usa-breadcrumb usa-breadcrumb--wrap"
        >
          <ol
            class="usa-breadcrumb__list"
          >
            <li
              class="usa-breadcrumb__list-item"
            >
              <a
                class="usa-link usa-breadcrumb__link"
                data-discover="true"
                href="/"
              >
                <span>
                  Home
                </span>
              </a>
            </li>
            <li
              class="usa-breadcrumb__list-item"
            >
              <a
                class="usa-link usa-breadcrumb__link"
                data-discover="true"
                href="/homepage-settings/form"
              >
                <span>
                  Homepage settings
                </span>
              </a>
            </li>
            <li
              aria-current="page"
              class="usa-breadcrumb__list-item usa-current"
            >
              <span>
                Select groups
              </span>
            </li>
          </ol>
        </nav>
        <h1
          class="margin-bottom-2"
        >
          Select groups
        </h1>
        <p
          class="font-body-lg margin-top-0 margin-bottom-4"
        >
          Models owned by a specific CMS component or CMMI group chosen below will show in a tabbed section.
        </p>
        <div
          class="mobile:grid-col-12 tablet:grid-col-12 desktop:grid-col-6"
          data-testid="grid"
        >
          <form
            action="#"
            data-testid="component-groups-add-component-group"
          >
            <fieldset
              class="usa-fieldset"
              data-testid="fieldset"
            >
              <label
                class="usa-label"
                data-testid="label"
                for="component-groups"
              >
                Components and groups
              </label>
              <p
                class="text-base margin-bottom-1 margin-top-0 line-height-body-4"
              >
                Start typing the name or acronym of the component or group.
              </p>
              <div>
                <div
                  class="easi-multiselect usa-combo-box margin-top-1 css-b62m3t-container"
                  id="component-groups"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-2-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="css-1vl89cy-control"
                  >
                    <div
                      class="css-hlgwow"
                    >
                      <div
                        class="css-1jqq78o-placeholder"
                        id="react-select-2-placeholder"
                      >
                        2 selected
                      </div>
                      <div
                        class="css-19bb58m"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-haspopup="true"
                          aria-labelledby="key 'componentGroups (en-US)' returned an object instead of string."
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="react-select-2-input"
                          role="combobox"
                          spellcheck="false"
                          style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="css-1wy0on6"
                    >
                      <button
                        aria-label="Clear selection"
                        class="usa-button--unstyled"
                        id="clear-selection"
                        tabindex="0"
                        type="button"
                      >
                        <div
                          aria-hidden="true"
                          class="css-1h8bgg-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </button>
                      <span
                        class="css-16b81-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="css-gjng1h-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="componentGroups"
                      type="hidden"
                      value="CCMI_PCMG"
                    />
                    <input
                      name="componentGroups"
                      type="hidden"
                      value="CCMI_PPG"
                    />
                  </div>
                </div>
                <div
                  class="easi-multiselect--selected"
                >
                  <h4
                    class="text-normal margin-bottom-1"
                  >
                    Selected groups
                  </h4>
                  <ul
                    class="usa-list--unstyled"
                    id="component-groups-tags"
                  >
                    <li
                      class="margin-bottom-05 margin-right-05 display-inline-block"
                    >
                      <span
                        class="usa-tag easi-multiselect--tag padding-1 bg-primary-lighter text-ink display-inline-flex text-no-uppercase flex-align-center"
                        data-testid="multiselect-tag--Patient Care Models Group (PCMG)"
                        id="selected-CCMI_PCMG"
                      >
                        CMMI/PCMG 
                        <svg
                          aria-label="Remove Patient Care Models Group (PCMG)"
                          class="usa-icon margin-left-05"
                          focusable="false"
                          height="1em"
                          role="button"
                          tabindex="0"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                      </span>
                    </li>
                    <li
                      class="margin-bottom-05 margin-right-05 display-inline-block"
                    >
                      <span
                        class="usa-tag easi-multiselect--tag padding-1 bg-primary-lighter text-ink display-inline-flex text-no-uppercase flex-align-center"
                        data-testid="multiselect-tag--Policy and Programs Group (PPG)"
                        id="selected-CCMI_PPG"
                      >
                        CMMI/PPG 
                        <svg
                          aria-label="Remove Policy and Programs Group (PPG)"
                          class="usa-icon margin-left-05"
                          focusable="false"
                          height="1em"
                          role="button"
                          tabindex="0"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                      </span>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="margin-y-4"
              >
                <button
                  class="usa-button"
                  data-testid="save-component-group-settings"
                  type="submit"
                >
                  Save
                </button>
              </div>
            </fieldset>
          </form>
        </div>
        <div
          style="width: fit-content;"
        >
          <a
            class="usa-link display-flex flex-align-center"
            data-discover="true"
            href="/homepage-settings/form"
          >
            <svg
              aria-label="back"
              class="usa-icon margin-right-2"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
            Don’t select groups and return to previous page
          </a>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`SelectComponentGroupsSettings > matches snapshot with no component groups selected 1`] = `
<DocumentFragment>
  <main
    class="mint-main-content"
    id="main-content"
    role="main"
    tabindex="-1"
  >
    <div
      class="grid-container"
      data-testid="gridContainer"
    >
      <div
        class="mobile:grid-col-12 tablet:grid-col-12 desktop:grid-col-12"
        data-testid="grid"
      >
        <nav
          aria-label="Breadcrumbs"
          class="usa-breadcrumb usa-breadcrumb--wrap"
        >
          <ol
            class="usa-breadcrumb__list"
          >
            <li
              class="usa-breadcrumb__list-item"
            >
              <a
                class="usa-link usa-breadcrumb__link"
                data-discover="true"
                href="/"
              >
                <span>
                  Home
                </span>
              </a>
            </li>
            <li
              class="usa-breadcrumb__list-item"
            >
              <a
                class="usa-link usa-breadcrumb__link"
                data-discover="true"
                href="/homepage-settings/form"
              >
                <span>
                  Homepage settings
                </span>
              </a>
            </li>
            <li
              aria-current="page"
              class="usa-breadcrumb__list-item usa-current"
            >
              <span>
                Select groups
              </span>
            </li>
          </ol>
        </nav>
        <h1
          class="margin-bottom-2"
        >
          Select groups
        </h1>
        <p
          class="font-body-lg margin-top-0 margin-bottom-4"
        >
          Models owned by a specific CMS component or CMMI group chosen below will show in a tabbed section.
        </p>
        <div
          class="mobile:grid-col-12 tablet:grid-col-12 desktop:grid-col-6"
          data-testid="grid"
        >
          <form
            action="#"
            data-testid="component-groups-add-component-group"
          >
            <fieldset
              class="usa-fieldset"
              data-testid="fieldset"
            >
              <label
                class="usa-label"
                data-testid="label"
                for="component-groups"
              >
                Components and groups
              </label>
              <p
                class="text-base margin-bottom-1 margin-top-0 line-height-body-4"
              >
                Start typing the name or acronym of the component or group.
              </p>
              <div>
                <div
                  class="easi-multiselect usa-combo-box margin-top-1 css-b62m3t-container"
                  id="component-groups"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-3-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="css-1vl89cy-control"
                  >
                    <div
                      class="css-hlgwow"
                    >
                      <div
                        class="css-1jqq78o-placeholder"
                        id="react-select-3-placeholder"
                      >
                        0 selected
                      </div>
                      <div
                        class="css-19bb58m"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-3-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          aria-labelledby="key 'componentGroups (en-US)' returned an object instead of string."
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="react-select-3-input"
                          role="combobox"
                          spellcheck="false"
                          style="color: inherit; background: 0px; opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="css-1wy0on6"
                    >
                      <span
                        class="css-16b81-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="css-gjng1h-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="componentGroups"
                      type="hidden"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="margin-y-4"
              >
                <button
                  class="usa-button"
                  data-testid="save-component-group-settings"
                  type="submit"
                >
                  Save
                </button>
              </div>
            </fieldset>
          </form>
        </div>
        <div
          style="width: fit-content;"
        >
          <a
            class="usa-link display-flex flex-align-center"
            data-discover="true"
            href="/homepage-settings/form"
          >
            <svg
              aria-label="back"
              class="usa-icon margin-right-2"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
              />
            </svg>
            Don’t select groups and return to previous page
          </a>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
